yyamamoto+sesetup@salesforce.com/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>男性</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>女性</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>相談者（姓カナ）</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>x01</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべての取引先担当者</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>03. 今週登録分</label>
    </listViews>
    <listViews>
        <fullName>x04</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>04. 今月誕生日の取引先担当者</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>